# substratekitties

./: .gitignore  .gitmodules  Cargo.toml  HOWTO.md  README.md  additional_types.json
example/substrate-front-end-template/: package.json
example/substrate-front-end-template/src/: App.js  App.jsx  Events.js  SubstrateKitties.js
example/substrate-front-end-template/src/KittyCard/: KittyCard.css  index.js
example/substrate-front-end-template/src/KittyCard/avatars/: index.jsx
example/substrate-front-end-template/src/config/: common.json
example/substrate-front-end-template/src/examples/substratekitties/: SubstrateKitties.jsx
example/substrate-node-template/: .gitignore  Cargo.toml
example/substrate-node-template/runtime/: Cargo.toml
example/substrate-node-template/runtime/src/: lib.rs
example/substrate-node-template/scripts/: run
example/substrate-node-template/src/: chain_spec.rs  service.rs
papi-ui/: .env.example  README.md  package-lock.json  package.json  pnpm-lock.yaml  polkadot-api.json
papi-ui/.papi/: polkadot-api.json
papi-ui/.papi/descriptors/: package.json
papi-ui/.papi/metadata/: wsUrl.scale
papi-ui/src/: App.tsx  account-selector.tsx  connect-button.tsx  kitty-card.tsx  kitty-list.tsx  main.tsx  marketplace-kitty-card.tsx  marketplace-list.tsx  mint-kitty-form.tsx  mint-kitty.tsx  papi-client.ts  set-price-form.tsx  transfer-kitty-form.tsx  types.ts  utils.ts
papi-ui/src/api/: constants.ts  methods.ts  papi-client.ts
papi-ui/src/components/: account-selector.tsx  connect-button.tsx  kitty-avatar.tsx  kitty-card.tsx  kitty-list.tsx  marketplace-kitty-card.tsx  marketplace-list.tsx  mint-kitty.tsx  set-price-form.tsx  transfer-kitty-form.tsx
papi-ui/src/context/: data.ts  kitty-context.tsx  use-kitty-context.ts
polkadot-sdk-minimal-template/: Cargo.toml
polkadot-sdk-minimal-template/.github/actions/ubuntu-dependencies/: action.yml
polkadot-sdk-minimal-template/.github/workflows/: ci.yml  pr-reminder.yml  release.yml
polkadot-sdk-minimal-template/node/: Cargo.toml
polkadot-sdk-minimal-template/runtime/: Cargo.toml
polkadot-sdk-minimal-template/runtime/src/: lib.rs
src/: lib.rs
substrate-cryptokitties/: Cargo.toml  README.md
substrate-cryptokitties-ui/src/: KittyCards.jsx  app.jsx
substrate-cryptokitties/runtime/: Cargo.toml
substrate-cryptokitties/runtime/src/: cryptokitties.rs  cryptokitties_building.rs  cryptokitties_final.rs  lib.rs
substrate-cryptokitties/runtime/wasm/: Cargo.toml  build.sh
substrate-cryptokitties/src/: chain_spec.rs  main.rs  service.rs
substratekitties/: Cargo.toml  README.md
substratekitties-ui/: .gitignore  README.md  package.json
substratekitties-ui/src/: KittyCards.css  KittyCards.jsx  WalletList.jsx  app.jsx
substratekitties-ui/src/KittyCards/: KittyCards.css  index.jsx
substratekitties-ui/src/KittyCards/avatars/: index.jsx
substratekitties-ui/src/avatars/: index.jsx
substratekitties/runtime/: Cargo.toml
substratekitties/runtime/src/: lib.rs  substratekitties.rs
substratekitties/runtime/wasm/: Cargo.toml  build.sh
substratekitties/src/: chain_spec.rs  main.rs  service.rs
