[package]
name = "substratekitties"
version = "0.1.0"
authors = ["Shawn Tabrizi"]
edition = "2018"

[features]
default = ['std']
std = [
    'serde',
    'codec/std',
    'support/std',
    'system/std',
    'runtime-io/std',
    'sr-primitives/std',
]

[dependencies.serde]
version = "1.0"
optional = true

[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '1.0.0'

[dependencies.support]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-support'
rev = 'ee4d5dd70b68a64faacca379b00b73f2cfee6074'

[dependencies.system]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-system'
rev = 'ee4d5dd70b68a64faacca379b00b73f2cfee6074'

[dependencies.sr-primitives]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'sr-primitives'
rev = 'ee4d5dd70b68a64faacca379b00b73f2cfee6074'

[dependencies.runtime-io]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'sr-io'
rev = 'ee4d5dd70b68a64faacca379b00b73f2cfee6074'

[dev-dependencies.primitives]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-primitives'
rev = 'ee4d5dd70b68a64faacca379b00b73f2cfee6074'

[dev-dependencies.balances]
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-balances'
rev = 'ee4d5dd70b68a64faacca379b00b73f2cfee6074'
