[build-dependencies]
vergen = '3.0.4'

[package]
authors = ['Anonymous']
build = 'build.rs'
edition = '2018'
name = 'node-template'
version = '2.0.0'

[dependencies]
derive_more = '0.15.0'
exit-future = '0.1.4'
futures = '0.1.29'
log = '0.4.8'
parking_lot = '0.9.0'
tokio = '0.1.22'
trie-root = '0.15.2'

[dependencies.aura]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-consensus-aura'
rev = 'ee4d5dd70b68a64faacca379b00b73f2cfee6074'

[dependencies.aura-primitives]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-consensus-aura-primitives'
rev = 'ee4d5dd70b68a64faacca379b00b73f2cfee6074'

[dependencies.basic-authorship]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-basic-authorship'
rev = 'ee4d5dd70b68a64faacca379b00b73f2cfee6074'

[dependencies.codec]
package = 'parity-scale-codec'
version = '1.0.0'

[dependencies.ctrlc]
features = ['termination']
version = '3.1.3'

[dependencies.grandpa]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-finality-grandpa'
rev = 'ee4d5dd70b68a64faacca379b00b73f2cfee6074'

[dependencies.grandpa-primitives]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-finality-grandpa-primitives'
rev = 'ee4d5dd70b68a64faacca379b00b73f2cfee6074'

[dependencies.inherents]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-inherents'
rev = 'ee4d5dd70b68a64faacca379b00b73f2cfee6074'

[dependencies.network]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-network'
rev = 'ee4d5dd70b68a64faacca379b00b73f2cfee6074'

[dependencies.primitives]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-primitives'
rev = 'ee4d5dd70b68a64faacca379b00b73f2cfee6074'

[dependencies.runtime]
package = 'node-template-runtime'
path = 'runtime'

[dependencies.sr-io]
git = 'https://github.com/paritytech/substrate.git'
rev = 'ee4d5dd70b68a64faacca379b00b73f2cfee6074'

[dependencies.substrate-cli]
git = 'https://github.com/paritytech/substrate.git'
rev = 'ee4d5dd70b68a64faacca379b00b73f2cfee6074'

[dependencies.substrate-client]
git = 'https://github.com/paritytech/substrate.git'
rev = 'ee4d5dd70b68a64faacca379b00b73f2cfee6074'

[dependencies.substrate-executor]
git = 'https://github.com/paritytech/substrate.git'
rev = 'ee4d5dd70b68a64faacca379b00b73f2cfee6074'

[dependencies.substrate-service]
git = 'https://github.com/paritytech/substrate.git'
rev = 'ee4d5dd70b68a64faacca379b00b73f2cfee6074'

[dependencies.transaction-pool]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-transaction-pool'
rev = 'ee4d5dd70b68a64faacca379b00b73f2cfee6074'

[workspace]
members = ['runtime']
[profile.release]
panic = 'unwind'

[[bin]]
name = 'node-template'
path = 'src/main.rs'
