[build-dependencies]
vergen = '3.0.4'

[package]
authors = ['Anonymous']
build = 'build.rs'
edition = '2018'
name = 'node-template'
version = '2.0.0'

[dependencies]
derive_more = '0.15.0'
exit-future = '0.1.4'
futures01 = '0.1.29'
futures = '0.3.1'
log = '0.4.8'
parking_lot = '0.9.0'
tokio = '0.1.22'
trie-root = '0.15.2'

[dependencies.aura]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-consensus-aura'
rev = '47b158b7a04bf0f5cd542a468076a7fda29648a4'

[dependencies.aura-primitives]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-consensus-aura-primitives'
rev = '47b158b7a04bf0f5cd542a468076a7fda29648a4'

[dependencies.basic-authorship]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-basic-authorship'
rev = '47b158b7a04bf0f5cd542a468076a7fda29648a4'

[dependencies.codec]
package = 'parity-scale-codec'
version = '1.0.0'

[dependencies.ctrlc]
features = ['termination']
version = '3.1.3'

[dependencies.grandpa]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-finality-grandpa'
rev = '47b158b7a04bf0f5cd542a468076a7fda29648a4'

[dependencies.grandpa-primitives]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-finality-grandpa-primitives'
rev = '47b158b7a04bf0f5cd542a468076a7fda29648a4'

[dependencies.inherents]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-inherents'
rev = '47b158b7a04bf0f5cd542a468076a7fda29648a4'

[dependencies.network]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-network'
rev = '47b158b7a04bf0f5cd542a468076a7fda29648a4'

[dependencies.primitives]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-primitives'
rev = '47b158b7a04bf0f5cd542a468076a7fda29648a4'

[dependencies.runtime]
package = 'node-template-runtime'
path = 'runtime'

[dependencies.sr-api]
git = 'https://github.com/paritytech/substrate.git'
rev = '47b158b7a04bf0f5cd542a468076a7fda29648a4'

[dependencies.sr-io]
git = 'https://github.com/paritytech/substrate.git'
rev = '47b158b7a04bf0f5cd542a468076a7fda29648a4'

[dependencies.sr-primitives]
git = 'https://github.com/paritytech/substrate.git'
package = 'sr-primitives'
rev = '47b158b7a04bf0f5cd542a468076a7fda29648a4'

[dependencies.substrate-cli]
git = 'https://github.com/paritytech/substrate.git'
rev = '47b158b7a04bf0f5cd542a468076a7fda29648a4'

[dependencies.substrate-client]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-client'
rev = '47b158b7a04bf0f5cd542a468076a7fda29648a4'

[dependencies.substrate-executor]
git = 'https://github.com/paritytech/substrate.git'
rev = '47b158b7a04bf0f5cd542a468076a7fda29648a4'

[dependencies.substrate-service]
git = 'https://github.com/paritytech/substrate.git'
rev = '47b158b7a04bf0f5cd542a468076a7fda29648a4'

[dependencies.transaction-pool]
git = 'https://github.com/paritytech/substrate.git'
package = 'sc-transaction-pool'
rev = '47b158b7a04bf0f5cd542a468076a7fda29648a4'

[workspace]
members = ['runtime']
[profile.release]
panic = 'unwind'

[[bin]]
name = 'node-template'
path = 'src/main.rs'
