[features]
default = ['std']
std = [
    'codec/std',
    'client/std',
    'rstd/std',
    'runtime-io/std',
    'support/std',
    'balances/std',
    'aura/std',
    'aura-primitives/std',
    'grandpa/std',
    'executive/std',
    'indices/std',
    'primitives/std',
    'sr-primitives/std',
    'randomness-collective-flip/std',
    'system/std',
    'timestamp/std',
    'sudo/std',
    'transaction-payment/std',
    'version/std',
    'serde',
    'safe-mix/std',
    'offchain-primitives/std',
    'substrate-session/std',
    'substratekitties/std',
]
[build-dependencies.wasm-builder-runner]
package = 'substrate-wasm-builder-runner'
version = '1.0.4'

[package]
authors = ['Anonymous']
edition = '2018'
name = 'node-template-runtime'
version = '2.0.0'
[dependencies.aura]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-aura'
rev = 'ee4d5dd70b68a64faacca379b00b73f2cfee6074'

[dependencies.substratekitties]
default_features = false
package = 'substratekitties'
path = '../../..'

[dependencies.aura-primitives]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-consensus-aura-primitives'
rev = 'ee4d5dd70b68a64faacca379b00b73f2cfee6074'

[dependencies.balances]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-balances'
rev = 'ee4d5dd70b68a64faacca379b00b73f2cfee6074'

[dependencies.client]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-client'
rev = 'ee4d5dd70b68a64faacca379b00b73f2cfee6074'

[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '1.0.0'

[dependencies.executive]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-executive'
rev = 'ee4d5dd70b68a64faacca379b00b73f2cfee6074'

[dependencies.grandpa]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-grandpa'
rev = 'ee4d5dd70b68a64faacca379b00b73f2cfee6074'

[dependencies.indices]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-indices'
rev = 'ee4d5dd70b68a64faacca379b00b73f2cfee6074'

[dependencies.offchain-primitives]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-offchain-primitives'
rev = 'ee4d5dd70b68a64faacca379b00b73f2cfee6074'

[dependencies.primitives]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-primitives'
rev = 'ee4d5dd70b68a64faacca379b00b73f2cfee6074'

[dependencies.randomness-collective-flip]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-randomness-collective-flip'
rev = 'ee4d5dd70b68a64faacca379b00b73f2cfee6074'

[dependencies.rstd]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'sr-std'
rev = 'ee4d5dd70b68a64faacca379b00b73f2cfee6074'

[dependencies.runtime-io]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'sr-io'
rev = 'ee4d5dd70b68a64faacca379b00b73f2cfee6074'

[dependencies.safe-mix]
default-features = false
version = '1.0.0'

[dependencies.serde]
features = ['derive']
optional = true
version = '1.0.101'

[dependencies.sr-primitives]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
rev = 'ee4d5dd70b68a64faacca379b00b73f2cfee6074'

[dependencies.substrate-session]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
rev = 'ee4d5dd70b68a64faacca379b00b73f2cfee6074'

[dependencies.sudo]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-sudo'
rev = 'ee4d5dd70b68a64faacca379b00b73f2cfee6074'

[dependencies.support]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-support'
rev = 'ee4d5dd70b68a64faacca379b00b73f2cfee6074'

[dependencies.system]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-system'
rev = 'ee4d5dd70b68a64faacca379b00b73f2cfee6074'

[dependencies.timestamp]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-timestamp'
rev = 'ee4d5dd70b68a64faacca379b00b73f2cfee6074'

[dependencies.transaction-payment]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-transaction-payment'
rev = 'ee4d5dd70b68a64faacca379b00b73f2cfee6074'

[dependencies.version]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'sr-version'
rev = 'ee4d5dd70b68a64faacca379b00b73f2cfee6074'
