[features]
default = ['std']
std = [
    'block-builder-api/std',
    'codec/std',
    'inherents/std',
    'tx-pool-api/std',
    'rstd/std',
    'runtime-io/std',
    'sr-api/std',
    'support/std',
    'balances/std',
    'aura/std',
    'aura-primitives/std',
    'grandpa/std',
    'executive/std',
    'indices/std',
    'primitives/std',
    'sr-primitives/std',
    'randomness-collective-flip/std',
    'system/std',
    'timestamp/std',
    'sudo/std',
    'transaction-payment/std',
    'version/std',
    'serde',
    'safe-mix/std',
    'offchain-primitives/std',
    'substrate-session/std',
    'substratekitties/std',
]
[build-dependencies.wasm-builder-runner]
package = 'substrate-wasm-builder-runner'
version = '1.0.4'

[package]
authors = ['Anonymous']
edition = '2018'
name = 'node-template-runtime'
version = '2.0.0'

[dependencies.aura]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'pallet-aura'
rev = '47b158b7a04bf0f5cd542a468076a7fda29648a4'

[dependencies.substratekitties]
default_features = false
package = 'substratekitties'
path = '../../..'

[dependencies.sr-api]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'sr-api'
rev = '47b158b7a04bf0f5cd542a468076a7fda29648a4'

[dependencies.block-builder-api]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-block-builder-runtime-api'
rev = '47b158b7a04bf0f5cd542a468076a7fda29648a4'

[dependencies.inherents]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-inherents'
rev = '47b158b7a04bf0f5cd542a468076a7fda29648a4'

[dependencies.tx-pool-api]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-transaction-pool-runtime-api'
rev = '47b158b7a04bf0f5cd542a468076a7fda29648a4'

[dependencies.aura-primitives]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-consensus-aura-primitives'
rev = '47b158b7a04bf0f5cd542a468076a7fda29648a4'

[dependencies.balances]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'pallet-balances'
rev = '47b158b7a04bf0f5cd542a468076a7fda29648a4'

[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '1.0.0'

[dependencies.executive]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'frame-executive'
rev = '47b158b7a04bf0f5cd542a468076a7fda29648a4'

[dependencies.grandpa]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'pallet-grandpa'
rev = '47b158b7a04bf0f5cd542a468076a7fda29648a4'

[dependencies.indices]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'pallet-indices'
rev = '47b158b7a04bf0f5cd542a468076a7fda29648a4'

[dependencies.offchain-primitives]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-offchain-primitives'
rev = '47b158b7a04bf0f5cd542a468076a7fda29648a4'

[dependencies.primitives]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-primitives'
rev = '47b158b7a04bf0f5cd542a468076a7fda29648a4'

[dependencies.randomness-collective-flip]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'pallet-randomness-collective-flip'
rev = '47b158b7a04bf0f5cd542a468076a7fda29648a4'

[dependencies.rstd]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'sr-std'
rev = '47b158b7a04bf0f5cd542a468076a7fda29648a4'

[dependencies.runtime-io]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'sr-io'
rev = '47b158b7a04bf0f5cd542a468076a7fda29648a4'

[dependencies.safe-mix]
default-features = false
version = '1.0.0'

[dependencies.serde]
features = ['derive']
optional = true
version = '1.0.101'

[dependencies.sr-primitives]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
rev = '47b158b7a04bf0f5cd542a468076a7fda29648a4'

[dependencies.substrate-session]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
rev = '47b158b7a04bf0f5cd542a468076a7fda29648a4'

[dependencies.sudo]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'pallet-sudo'
rev = '47b158b7a04bf0f5cd542a468076a7fda29648a4'

[dependencies.support]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'frame-support'
rev = '47b158b7a04bf0f5cd542a468076a7fda29648a4'

[dependencies.system]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'frame-system'
rev = '47b158b7a04bf0f5cd542a468076a7fda29648a4'

[dependencies.timestamp]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'pallet-timestamp'
rev = '47b158b7a04bf0f5cd542a468076a7fda29648a4'

[dependencies.transaction-payment]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'pallet-transaction-payment'
rev = '47b158b7a04bf0f5cd542a468076a7fda29648a4'

[dependencies.version]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'sr-version'
rev = '47b158b7a04bf0f5cd542a468076a7fda29648a4'
